--- a/src/main/resources/assets/extshape/lang/en_us.json
+++ b/src/main/resources/assets/extshape/lang/en_us.json
@@ -34,8 +34,8 @@
   "options.extshape.shapesInSpecificGroups": "Shapes in specific group",
   "options.extshape.shapesInSpecificGroups.description": "Add which shapes to the mod's specific item groups? (Separated with space.)",
   "options.extshape.reset": "Reset",
-  "options.extshape.preventWoodenWallRecipes": "Prevent wooden wall recipes",
-  "options.extshape.preventWoodenWallRecipes.tooltip": "Prevent the crafting recipes of wooden walls, in order to avoid the conflict with wooden trapdoors. When ON, you cannot craft wooden walls. If you installed mods that solve recipe conflict, you can turn this option OFF.",
+  "options.extshape.preventWoodenWallRecipes": "Prevent wooden add copper wall recipes",
+  "options.extshape.preventWoodenWallRecipes.tooltip": "Prevent the crafting recipes of wooden walls and copper walls, in order to avoid the conflict with wooden trapdoors and copper walls. When ON, you cannot craft wooden walls. If you installed mods that solve recipe conflict, you can turn this option OFF.",
   "options.extshape.avoidSomeButtonRecipes": "Avoid some button recipes",
   "options.extshape.avoidSomeButtonRecipes.tooltip": "Avoid the crafting recipes of some buttons, in order to avoid the conflict with other items. For instance, the recipe of diamond button from a diamond block conflicts with breaking a diamond block down to 9 diamond items. When ON, you cannot craft those buttons, so that the crafting of other items are ensured. If you installed mods that solve recipe conflict, you can turn this option OFF.",
   "options.extshape.specialSnowSlabCrafting": "Special snow slab crafting",
