--- a/src/main/resources/assets/extshape/lang/lzh.json
+++ b/src/main/resources/assets/extshape/lang/lzh.json
@@ -34,8 +34,8 @@
   "options.extshape.shapesInSpecificGroups": "形之增益入專組者",
   "options.extshape.shapesInSpecificGroups.description": "增益何形於是囊之專物組耶？（間以空。）",
   "options.extshape.reset": "復",
-  "options.extshape.preventWoodenWallRecipes": "避木垣之製方",
-  "options.extshape.preventWoodenWallRecipes.tooltip": "避木垣之製方，以解其與解與木窖門之方之撞。若開，汝無以精製木垣。若既載之改囊之解方之撞者，是項可關也。",
+  "options.extshape.preventWoodenWallRecipes": "避木垣同銅垣之製方",
+  "options.extshape.preventWoodenWallRecipes.tooltip": "避木垣同銅垣之製方，以解其與解與木與銅窖門之方之撞。若開，汝無以精製木垣同銅垣。若既載之改囊之解方之撞者，是項可關也。",
   "options.extshape.avoidSomeButtonRecipes": "避數鈕之製方",
   "options.extshape.avoidSomeButtonRecipes.tooltip": "避數鈕之製配方，以解與他物方之撞。若金剛石塊者，合一鈕之方，撞與析為九物之方也。若開，無可製是鈕也，以保他物之製。若既載之改囊之解方之撞者，是項可關也。",
   "options.extshape.specialSnowSlabCrafting": "雪版特方",
