--- a/src/main/resources/assets/extshape/lang/zh_cn.json
+++ b/src/main/resources/assets/extshape/lang/zh_cn.json
@@ -34,8 +34,8 @@
   "options.extshape.shapesInSpecificGroups": "专用物品组中的形状",
   "options.extshape.shapesInSpecificGroups.description": "将哪些形状的方块添加到本模组的专用物品组中？（用空格间隔。）",
   "options.extshape.reset": "重置",
-  "options.extshape.preventWoodenWallRecipes": "避免木墙合成配方",
-  "options.extshape.preventWoodenWallRecipes.tooltip": "避免木墙的合成配方，以解决与木质活板门的配方撞车问题。若开启，您将无法合成木墙。如果您安装了可以修复合成表撞车的模组，可以将本选项关闭。",
+  "options.extshape.preventWoodenWallRecipes": "避免木墙和铜墙合成配方",
+  "options.extshape.preventWoodenWallRecipes.tooltip": "避免木墙和铜墙的合成配方，以解决与木质和铜质活板门的配方撞车问题。若开启，您将无法合成木墙和铜墙。如果您安装了可以修复合成表撞车的模组，可以将本选项关闭。",
   "options.extshape.avoidSomeButtonRecipes": "避免部分按钮配方",
   "options.extshape.avoidSomeButtonRecipes.tooltip": "避免部分按钮的合成配方，以修复与其他物品配方撞车的问题。例如，由一个钻石块合成钻石按钮的配方与将钻石块分解为9个钻石物品的配方是撞车的。若开启，您将无法合成这些按钮，以确保其他物品能正常合成。如果您安装了可以修复合成表撞车的模组，可以将本选项关闭。",
   "options.extshape.specialSnowSlabCrafting": "特殊的雪台阶配方",
