--- a/src/main/resources/assets/extshape/lang/zh_hk.json
+++ b/src/main/resources/assets/extshape/lang/zh_hk.json
@@ -34,8 +34,8 @@
   "options.extshape.shapesInSpecificGroups": "專用物品組中嘅形狀",
   "options.extshape.shapesInSpecificGroups.description": "將邊形狀嘅方塊添加到本模組嘅專用物品組中？（用空格間隔。）",
   "options.extshape.reset": "重置",
-  "options.extshape.preventWoodenWallRecipes": "避免木牆合成配方",
-  "options.extshape.preventWoodenWallRecipes.tooltip": "避免木牆嘅合成配方，以解決同木質地板門嘅配方撞車問題。若開啟，你將冇法合成木牆。如果你裝有可以修復合成表撞車嘅模組，可以將本選項關閉。",
+  "options.extshape.preventWoodenWallRecipes": "避免木牆和銅牆合成配方",
+  "options.extshape.preventWoodenWallRecipes.tooltip": "避免木牆同銅牆嘅合成配方，以解決同木質同銅質地板門嘅配方撞車問題。若開啟，你將冇法合成木牆和銅牆。如果你裝有可以修復合成表撞車嘅模組，可以將本選項關閉。",
   "options.extshape.avoidSomeButtonRecipes": "避免部分按鈕配方",
   "options.extshape.avoidSomeButtonRecipes.tooltip": "避免部分按鈕嘅合成配方，以修復同其他物品配方撞車嘅問題。例如，由個鑽石磚合成鑽石按鈕嘅配方與將鑽石磚分解為 9 個鑽石物品嘅配方撞車。若開啟咗，你將冇法合成呢啲按鈕，以確保其他物品能正常合成。如果你安裝咗可以修復合成表撞車嘅模組，可以將本選項關閉。",
   "options.extshape.specialSnowSlabCrafting": "特殊嘅雪半磚配方",
