--- a/src/main/resources/assets/extshape/lang/zh_tw.json
+++ b/src/main/resources/assets/extshape/lang/zh_tw.json
@@ -34,8 +34,8 @@
   "options.extshape.shapesInSpecificGroups": "專用物品組中的形狀",
   "options.extshape.shapesInSpecificGroups.description": "將哪些形狀的方塊添加到本模組的專用物品組中？（用空格間隔。）",
   "options.extshape.reset": "重置",
-  "options.extshape.preventWoodenWallRecipes": "避免木牆合成配方",
-  "options.extshape.preventWoodenWallRecipes.tooltip": "避免木牆的合成配方，以解決與木質地板門的配方撞車問題。若開啟，您將無法合成木牆。如果您安裝了可以修復合成表撞車的模組，可以將本選項關閉。",
+  "options.extshape.preventWoodenWallRecipes": "避免木牆和銅牆合成配方",
+  "options.extshape.preventWoodenWallRecipes.tooltip": "避免木牆和銅牆的合成配方，以解決與木質和銅質地板門的配方撞車問題。若開啟，您將無法合成木牆和銅牆。如果您安裝了可以修復合成表撞車的模組，可以將本選項關閉。",
   "options.extshape.avoidSomeButtonRecipes": "避免部分按鈕配方",
   "options.extshape.avoidSomeButtonRecipes.tooltip": "避免部分按鈕的合成配方，以修復與其他物品配方撞車的問題。例如，由一個鑽石塊合成鑽石按鈕的配方與將鑽石方塊分解為 9 個鑽石物品的配方是撞車的。若開啟，您將無法合成這些按鈕，以確保其他物品能正常合成。如果您安裝了可以修復合成表撞車的模組，可以將本選項關閉。",
   "options.extshape.specialSnowSlabCrafting": "特殊的雪半磚配方",
