完善标签翻译

--- a/src/main/resources/assets/extshape/lang/lzh.json
+++ b/src/main/resources/assets/extshape/lang/lzh.json
@@ -10,7 +10,7 @@
   "block.extshape.?_button": "%s鈕",
   "block.extshape.?_pressure_plate": "%s踏板",
   "block.extshape.?_vertical_slab": "%s立版",
-  "block.extshape.?_quarter_piece": "%s條",
+  "block.extshape.?_quarter_piece": "%s橫條",
   "block.extshape.?_vertical_stairs": "%s立階",
   "block.extshape.?_vertical_quarter_piece": "%s立條",
 
@@ -19,7 +19,7 @@
   "itemGroup.extshape.stone_blocks": "\u00a79塊形之擴：\u00a7r石",
   "itemGroup.extshape.other_blocks": "\u00a79塊形之擴：\u00a7r餘",
 
-  "modmenu.descriptionTranslation.extshape": "增益眾形於原塊，含形之藝赍未含者，如立版、立階、條。數塊咸大類本原礦藝之形，類其基礎。如例之，基石階版抵炸藥之攻、凋靈之擊。羊毛之檻扉，或灼或鉸。\n君因於創法製絕細之築，亦增生法之樂也。",
+  "modmenu.descriptionTranslation.extshape": "增益眾形於原塊，含形之藝赍未含者，如立版、立階、橫條。數塊咸大類本原礦藝之形，類其基礎。如例之，基石階版抵炸藥之攻、凋靈之擊。羊毛之檻扉，或灼或鉸。\n君因於創法製絕細之築，亦增生法之樂也。",
   "modmenu.summaryTranslation.extshape": "增益眾形於原塊",
 
   "options.extshape.title": "塊形之擴改囊配製",
@@ -63,5 +63,169 @@
   "message.extshape.recipe_conflict.finish.single": "驗畢，%s撞尋",
   "message.extshape.recipe_conflict.finish.plural": "驗畢，%s撞尋",
 
-  "modmenu.nameTranslation.extshape": "塊形之擴"
+  "modmenu.nameTranslation.extshape": "塊形之擴",
+
+  "tag.block.extshape.pickaxe_unmineable": "無以鎬采",
+
+  "tag.block.extshape.woolen_blocks": "羊毛塊",
+  "tag.block.extshape.wooden_blocks": "木製塊",
+  "tag.block.extshape.log_blocks": "樁塊",
+
+  "tag.block.extshape.log_stairs": "樁階",
+  "tag.block.extshape.woolen_stairs": "羊毛階",
+  "tag.block.extshape.concrete_stairs": "砼階",
+  "tag.block.extshape.terracotta_stairs": "陶階",
+  "tag.block.extshape.stained_terracotta_stairs": "既染陶階",
+
+  "tag.block.extshape.log_slabs": "樁版",
+  "tag.block.extshape.woolen_slabs": "羊毛版",
+  "tag.block.extshape.concrete_slabs": "砼版",
+  "tag.block.extshape.terracotta_slabs": "陶版",
+  "tag.block.extshape.stained_terracotta_slabs": "既染陶版",
+  "tag.block.extshape.glazed_terracotta_slabs": "釉陶版",
+
+  "tag.block.extshape.log_fences": "樁檻",
+  "tag.block.extshape.woolen_fences": "羊毛檻",
+  "tag.block.extshape.concrete_fences": "砼檻",
+  "tag.block.extshape.terracotta_fences": "陶檻",
+  "tag.block.extshape.stained_terracotta_fences": "既染陶檻",
+
+  "tag.block.extshape.log_fence_gates": "樁扉",
+  "tag.block.extshape.woolen_fence_gates": "羊毛扉",
+  "tag.block.extshape.concrete_fence_gates": "砼扉",
+  "tag.block.extshape.terracotta_fence_gates": "陶扉",
+  "tag.block.extshape.stained_terracotta_fence_gates": "既染陶扉",
+
+  "tag.block.extshape.wooden_walls": "木製垣",
+  "tag.block.extshape.log_walls": "樁垣",
+  "tag.block.extshape.woolen_walls": "羊毛垣",
+  "tag.block.extshape.concrete_walls": "砼垣",
+  "tag.block.extshape.terracotta_walls": "陶垣",
+  "tag.block.extshape.stained_terracotta_walls": "既染陶垣",
+
+  "tag.block.extshape.log_buttons": "樁鈕",
+  "tag.block.extshape.woolen_buttons": "羊毛鈕",
+  "tag.block.extshape.concrete_buttons": "砼鈕",
+  "tag.block.extshape.terracotta_buttons": "陶鈕",
+  "tag.block.extshape.stained_terracotta_buttons": "既染陶鈕",
+
+  "tag.block.extshape.log_pressure_plates": "樁踏板",
+  "tag.block.extshape.woolen_pressure_plates": "羊毛踏板",
+  "tag.block.extshape.concrete_pressure_plates": "砼踏板",
+  "tag.block.extshape.terracotta_pressure_plates": "陶踏板",
+  "tag.block.extshape.stained_terracotta_pressure_plates": "既染陶踏板",
+
+  "tag.block.extshape.vertical_slabs": "立版",
+  "tag.block.extshape.wooden_vertical_slabs": "木製立版",
+  "tag.block.extshape.log_vertical_slabs": "樁立版",
+  "tag.block.extshape.woolen_vertical_slabs": "羊毛立版",
+  "tag.block.extshape.concrete_vertical_slabs": "砼立版",
+  "tag.block.extshape.terracotta_vertical_slabs": "陶立版",
+  "tag.block.extshape.stained_terracotta_vertical_slabs": "既染陶立版",
+
+  "tag.block.extshape.quarter_pieces": "橫條",
+  "tag.block.extshape.wooden_quarter_pieces": "木製橫條",
+  "tag.block.extshape.log_quarter_pieces": "樁橫條",
+  "tag.block.extshape.woolen_quarter_pieces": "羊毛橫條",
+  "tag.block.extshape.concrete_quarter_pieces": "砼橫條",
+  "tag.block.extshape.terracotta_quarter_pieces": "陶橫條",
+  "tag.block.extshape.stained_terracotta_quarter_pieces": "既染陶橫條",
+
+  "tag.block.extshape.vertical_stairs": "豎直階",
+  "tag.block.extshape.wooden_vertical_stairs": "木製階",
+  "tag.block.extshape.log_vertical_stairs": "豎直樁階",
+  "tag.block.extshape.woolen_vertical_stairs": "豎直羊毛階",
+  "tag.block.extshape.concrete_vertical_stairs": "豎直砼階",
+  "tag.block.extshape.terracotta_vertical_stairs": "豎直陶階",
+  "tag.block.extshape.stained_terracotta_vertical_stairs": "豎直既染陶階",
+
+  "tag.block.extshape.vertical_quarter_pieces": "立條",
+  "tag.block.extshape.wooden_vertical_quarter_pieces": "木製立條",
+  "tag.block.extshape.log_vertical_quarter_pieces": "樁立條",
+  "tag.block.extshape.woolen_vertical_quarter_pieces": "羊毛立條",
+  "tag.block.extshape.concrete_vertical_quarter_pieces": "砼立條",
+  "tag.block.extshape.terracotta_vertical_quarter_pieces": "陶立條",
+  "tag.block.extshape.stained_terracotta_vertical_quarter_pieces": "既染陶立條",
+
+  "tag.item.extshape.woolen_blocks": "羊毛塊",
+  "tag.item.extshape.wooden_blocks": "木製塊",
+  "tag.item.extshape.log_blocks": "樁塊",
+
+  "tag.item.extshape.log_stairs": "樁階",
+  "tag.item.extshape.woolen_stairs": "羊毛階",
+  "tag.item.extshape.concrete_stairs": "砼階",
+  "tag.item.extshape.terracotta_stairs": "陶階",
+  "tag.item.extshape.stained_terracotta_stairs": "既染陶階",
+
+  "tag.item.extshape.log_slabs": "樁版",
+  "tag.item.extshape.woolen_slabs": "羊毛版",
+  "tag.item.extshape.concrete_slabs": "砼版",
+  "tag.item.extshape.terracotta_slabs": "陶版",
+  "tag.item.extshape.stained_terracotta_slabs": "既染陶版",
+  "tag.item.extshape.glazed_terracotta_slabs": "釉陶版",
+
+  "tag.item.extshape.log_fences": "樁檻",
+  "tag.item.extshape.woolen_fences": "羊毛檻",
+  "tag.item.extshape.concrete_fences": "砼檻",
+  "tag.item.extshape.terracotta_fences": "陶檻",
+  "tag.item.extshape.stained_terracotta_fences": "既染陶檻",
+
+  "tag.item.extshape.log_fence_gates": "樁扉",
+  "tag.item.extshape.woolen_fence_gates": "羊毛扉",
+  "tag.item.extshape.concrete_fence_gates": "砼扉",
+  "tag.item.extshape.terracotta_fence_gates": "陶扉",
+  "tag.item.extshape.stained_terracotta_fence_gates": "既染陶扉",
+
+  "tag.item.extshape.wooden_walls": "木製垣",
+  "tag.item.extshape.log_walls": "樁垣",
+  "tag.item.extshape.woolen_walls": "羊毛垣",
+  "tag.item.extshape.concrete_walls": "砼垣",
+  "tag.item.extshape.terracotta_walls": "陶垣",
+  "tag.item.extshape.stained_terracotta_walls": "既染陶垣",
+
+  "tag.item.extshape.log_buttons": "樁鈕",
+  "tag.item.extshape.woolen_buttons": "羊毛鈕",
+  "tag.item.extshape.concrete_buttons": "砼鈕",
+  "tag.item.extshape.terracotta_buttons": "陶鈕",
+  "tag.item.extshape.stained_terracotta_buttons": "既染陶鈕",
+
+  "tag.item.extshape.log_pressure_plates": "樁踏板",
+  "tag.item.extshape.woolen_pressure_plates": "羊毛踏板",
+  "tag.item.extshape.concrete_pressure_plates": "砼踏板",
+  "tag.item.extshape.terracotta_pressure_plates": "陶踏板",
+  "tag.item.extshape.stained_terracotta_pressure_plates": "既染陶踏板",
+
+  "tag.item.extshape.vertical_slabs": "立版",
+  "tag.item.extshape.wooden_vertical_slabs": "木製立版",
+  "tag.item.extshape.log_vertical_slabs": "樁立版",
+  "tag.item.extshape.woolen_vertical_slabs": "羊毛立版",
+  "tag.item.extshape.concrete_vertical_slabs": "砼立版",
+  "tag.item.extshape.terracotta_vertical_slabs": "陶立版",
+  "tag.item.extshape.stained_terracotta_vertical_slabs": "既染陶立版",
+
+  "tag.item.extshape.quarter_pieces": "橫條",
+  "tag.item.extshape.wooden_quarter_pieces": "木製橫條",
+  "tag.item.extshape.log_quarter_pieces": "樁橫條",
+  "tag.item.extshape.woolen_quarter_pieces": "羊毛橫條",
+  "tag.item.extshape.concrete_quarter_pieces": "砼橫條",
+  "tag.item.extshape.terracotta_quarter_pieces": "陶橫條",
+  "tag.item.extshape.stained_terracotta_quarter_pieces": "既染陶橫條",
+
+  "tag.item.extshape.vertical_stairs": "豎直階",
+  "tag.item.extshape.wooden_vertical_stairs": "木製階",
+  "tag.item.extshape.log_vertical_stairs": "豎直樁階",
+  "tag.item.extshape.woolen_vertical_stairs": "豎直羊毛階",
+  "tag.item.extshape.concrete_vertical_stairs": "豎直砼階",
+  "tag.item.extshape.terracotta_vertical_stairs": "豎直陶階",
+  "tag.item.extshape.stained_terracotta_vertical_stairs": "豎直既染陶階",
+
+  "tag.item.extshape.vertical_quarter_pieces": "立條",
+  "tag.item.extshape.wooden_vertical_quarter_pieces": "木製立條",
+  "tag.item.extshape.log_vertical_quarter_pieces": "樁立條",
+  "tag.item.extshape.woolen_vertical_quarter_pieces": "羊毛立條",
+  "tag.item.extshape.concrete_vertical_quarter_pieces": "砼立條",
+  "tag.item.extshape.terracotta_vertical_quarter_pieces": "陶立條",
+  "tag.item.extshape.stained_terracotta_vertical_quarter_pieces": "既染陶立條",
+
+  "tags.block.extshape.snow": "雪"
 }
