--- a/src/main/resources/assets/extshape/lang/zh_tw.json
+++ b/src/main/resources/assets/extshape/lang/zh_tw.json
@@ -65,5 +65,169 @@
 
   "modmenu.nameTranslation.extshape": "擴展方塊形狀",
 
-  "options.extshape.addToVanillaGroups.blockus": "請注意：如要在創造模式中找到 Blockus 模組中的擴展形狀的方塊，你需要啟用「添加至原版物品組」。這些方塊只會顯示在 Blockus 的物品組中。Blockus 方塊的擴展形狀的方塊沒有專用物品組。"
+  "options.extshape.addToVanillaGroups.blockus": "請注意：如要在創造模式中找到 Blockus 模組中的擴展形狀的方塊，你需要啟用「添加至原版物品組」。這些方塊只會顯示在 Blockus 的物品組中。Blockus 方塊的擴展形狀的方塊沒有專用物品組。",
+
+  "tag.block.extshape.pickaxe_unmineable": "鎬不可挖掘",
+
+  "tag.block.extshape.woolen_blocks": "羊毛方塊",
+  "tag.block.extshape.wooden_blocks": "木製方塊",
+  "tag.block.extshape.log_blocks": "原木方塊",
+
+  "tag.block.extshape.log_stairs": "原木階梯",
+  "tag.block.extshape.woolen_stairs": "羊毛階梯",
+  "tag.block.extshape.concrete_stairs": "混凝土階梯",
+  "tag.block.extshape.terracotta_stairs": "陶土階梯",
+  "tag.block.extshape.stained_terracotta_stairs": "染色陶土階梯",
+
+  "tag.block.extshape.log_slabs": "原木半磚",
+  "tag.block.extshape.woolen_slabs": "羊毛半磚",
+  "tag.block.extshape.concrete_slabs": "混凝土半磚",
+  "tag.block.extshape.terracotta_slabs": "陶土半磚",
+  "tag.block.extshape.stained_terracotta_slabs": "染色陶土半磚",
+  "tag.block.extshape.glazed_terracotta_slabs": "釉陶半磚",
+
+  "tag.block.extshape.log_fences": "原木柵欄",
+  "tag.block.extshape.woolen_fences": "羊毛柵欄",
+  "tag.block.extshape.concrete_fences": "混凝土柵欄",
+  "tag.block.extshape.terracotta_fences": "陶土柵欄",
+  "tag.block.extshape.stained_terracotta_fences": "染色陶土柵欄",
+
+  "tag.block.extshape.log_fence_gates": "原木柵欄門",
+  "tag.block.extshape.woolen_fence_gates": "羊毛柵欄門",
+  "tag.block.extshape.concrete_fence_gates": "混凝土柵欄門",
+  "tag.block.extshape.terracotta_fence_gates": "陶土柵欄門",
+  "tag.block.extshape.stained_terracotta_fence_gates": "染色陶土柵欄門",
+
+  "tag.block.extshape.wooden_walls": "木製牆",
+  "tag.block.extshape.log_walls": "原木牆",
+  "tag.block.extshape.woolen_walls": "羊毛牆",
+  "tag.block.extshape.concrete_walls": "混凝土牆",
+  "tag.block.extshape.terracotta_walls": "陶土牆",
+  "tag.block.extshape.stained_terracotta_walls": "染色陶土牆",
+
+  "tag.block.extshape.log_buttons": "原木按鈕",
+  "tag.block.extshape.woolen_buttons": "羊毛按鈕",
+  "tag.block.extshape.concrete_buttons": "混凝土按鈕",
+  "tag.block.extshape.terracotta_buttons": "陶土按鈕",
+  "tag.block.extshape.stained_terracotta_buttons": "染色陶土按鈕",
+
+  "tag.block.extshape.log_pressure_plates": "原木壓力板",
+  "tag.block.extshape.woolen_pressure_plates": "羊毛壓力板",
+  "tag.block.extshape.concrete_pressure_plates": "混凝土壓力板",
+  "tag.block.extshape.terracotta_pressure_plates": "陶土壓力板",
+  "tag.block.extshape.stained_terracotta_pressure_plates": "染色陶土壓力板",
+
+  "tag.block.extshape.vertical_slabs": "豎直半磚",
+  "tag.block.extshape.wooden_vertical_slabs": "豎直木製半磚",
+  "tag.block.extshape.log_vertical_slabs": "豎直原木半磚",
+  "tag.block.extshape.woolen_vertical_slabs": "豎直羊毛半磚",
+  "tag.block.extshape.concrete_vertical_slabs": "豎直混凝土半磚",
+  "tag.block.extshape.terracotta_vertical_slabs": "豎直陶土半磚",
+  "tag.block.extshape.stained_terracotta_vertical_slabs": "豎直染色陶土半磚",
+
+  "tag.block.extshape.quarter_pieces": "橫條",
+  "tag.block.extshape.wooden_quarter_pieces": "木製橫條",
+  "tag.block.extshape.log_quarter_pieces": "原木橫條",
+  "tag.block.extshape.woolen_quarter_pieces": "羊毛橫條",
+  "tag.block.extshape.concrete_quarter_pieces": "混凝土橫條",
+  "tag.block.extshape.terracotta_quarter_pieces": "陶土橫條",
+  "tag.block.extshape.stained_terracotta_quarter_pieces": "染色陶土橫條",
+
+  "tag.block.extshape.vertical_stairs": "豎直階梯",
+  "tag.block.extshape.wooden_vertical_stairs": "木製階梯",
+  "tag.block.extshape.log_vertical_stairs": "豎直原木階梯",
+  "tag.block.extshape.woolen_vertical_stairs": "豎直羊毛階梯",
+  "tag.block.extshape.concrete_vertical_stairs": "豎直混凝土階梯",
+  "tag.block.extshape.terracotta_vertical_stairs": "豎直陶土階梯",
+  "tag.block.extshape.stained_terracotta_vertical_stairs": "豎直染色陶土階梯",
+
+  "tag.block.extshape.vertical_quarter_pieces": "縱條",
+  "tag.block.extshape.wooden_vertical_quarter_pieces": "木製縱條",
+  "tag.block.extshape.log_vertical_quarter_pieces": "原木縱條",
+  "tag.block.extshape.woolen_vertical_quarter_pieces": "羊毛縱條",
+  "tag.block.extshape.concrete_vertical_quarter_pieces": "混凝土縱條",
+  "tag.block.extshape.terracotta_vertical_quarter_pieces": "陶土縱條",
+  "tag.block.extshape.stained_terracotta_vertical_quarter_pieces": "染色陶土縱條",
+
+  "tag.item.extshape.woolen_blocks": "羊毛方塊",
+  "tag.item.extshape.wooden_blocks": "木製方塊",
+  "tag.item.extshape.log_blocks": "原木方塊",
+
+  "tag.item.extshape.log_stairs": "原木階梯",
+  "tag.item.extshape.woolen_stairs": "羊毛階梯",
+  "tag.item.extshape.concrete_stairs": "混凝土階梯",
+  "tag.item.extshape.terracotta_stairs": "陶土階梯",
+  "tag.item.extshape.stained_terracotta_stairs": "染色陶土階梯",
+
+  "tag.item.extshape.log_slabs": "原木半磚",
+  "tag.item.extshape.woolen_slabs": "羊毛半磚",
+  "tag.item.extshape.concrete_slabs": "混凝土半磚",
+  "tag.item.extshape.terracotta_slabs": "陶土半磚",
+  "tag.item.extshape.stained_terracotta_slabs": "染色陶土半磚",
+  "tag.item.extshape.glazed_terracotta_slabs": "釉陶半磚",
+
+  "tag.item.extshape.log_fences": "原木柵欄",
+  "tag.item.extshape.woolen_fences": "羊毛柵欄",
+  "tag.item.extshape.concrete_fences": "混凝土柵欄",
+  "tag.item.extshape.terracotta_fences": "陶土柵欄",
+  "tag.item.extshape.stained_terracotta_fences": "染色陶土柵欄",
+
+  "tag.item.extshape.log_fence_gates": "原木柵欄門",
+  "tag.item.extshape.woolen_fence_gates": "羊毛柵欄門",
+  "tag.item.extshape.concrete_fence_gates": "混凝土柵欄門",
+  "tag.item.extshape.terracotta_fence_gates": "陶土柵欄門",
+  "tag.item.extshape.stained_terracotta_fence_gates": "染色陶土柵欄門",
+
+  "tag.item.extshape.wooden_walls": "木製牆",
+  "tag.item.extshape.log_walls": "原木牆",
+  "tag.item.extshape.woolen_walls": "羊毛牆",
+  "tag.item.extshape.concrete_walls": "混凝土牆",
+  "tag.item.extshape.terracotta_walls": "陶土牆",
+  "tag.item.extshape.stained_terracotta_walls": "染色陶土牆",
+
+  "tag.item.extshape.log_buttons": "原木按鈕",
+  "tag.item.extshape.woolen_buttons": "羊毛按鈕",
+  "tag.item.extshape.concrete_buttons": "混凝土按鈕",
+  "tag.item.extshape.terracotta_buttons": "陶土按鈕",
+  "tag.item.extshape.stained_terracotta_buttons": "染色陶土按鈕",
+
+  "tag.item.extshape.log_pressure_plates": "原木壓力板",
+  "tag.item.extshape.woolen_pressure_plates": "羊毛壓力板",
+  "tag.item.extshape.concrete_pressure_plates": "混凝土壓力板",
+  "tag.item.extshape.terracotta_pressure_plates": "陶土壓力板",
+  "tag.item.extshape.stained_terracotta_pressure_plates": "染色陶土壓力板",
+
+  "tag.item.extshape.vertical_slabs": "豎直半磚",
+  "tag.item.extshape.wooden_vertical_slabs": "豎直木製半磚",
+  "tag.item.extshape.log_vertical_slabs": "豎直原木半磚",
+  "tag.item.extshape.woolen_vertical_slabs": "豎直羊毛半磚",
+  "tag.item.extshape.concrete_vertical_slabs": "豎直混凝土半磚",
+  "tag.item.extshape.terracotta_vertical_slabs": "豎直陶土半磚",
+  "tag.item.extshape.stained_terracotta_vertical_slabs": "豎直染色陶土半磚",
+
+  "tag.item.extshape.quarter_pieces": "橫條",
+  "tag.item.extshape.wooden_quarter_pieces": "木製橫條",
+  "tag.item.extshape.log_quarter_pieces": "原木橫條",
+  "tag.item.extshape.woolen_quarter_pieces": "羊毛橫條",
+  "tag.item.extshape.concrete_quarter_pieces": "混凝土橫條",
+  "tag.item.extshape.terracotta_quarter_pieces": "陶土橫條",
+  "tag.item.extshape.stained_terracotta_quarter_pieces": "染色陶土橫條",
+
+  "tag.item.extshape.vertical_stairs": "豎直階梯",
+  "tag.item.extshape.wooden_vertical_stairs": "木製階梯",
+  "tag.item.extshape.log_vertical_stairs": "豎直原木階梯",
+  "tag.item.extshape.woolen_vertical_stairs": "豎直羊毛階梯",
+  "tag.item.extshape.concrete_vertical_stairs": "豎直混凝土階梯",
+  "tag.item.extshape.terracotta_vertical_stairs": "豎直陶土階梯",
+  "tag.item.extshape.stained_terracotta_vertical_stairs": "豎直染色陶土階梯",
+
+  "tag.item.extshape.vertical_quarter_pieces": "縱條",
+  "tag.item.extshape.wooden_vertical_quarter_pieces": "木製縱條",
+  "tag.item.extshape.log_vertical_quarter_pieces": "原木縱條",
+  "tag.item.extshape.woolen_vertical_quarter_pieces": "羊毛縱條",
+  "tag.item.extshape.concrete_vertical_quarter_pieces": "混凝土縱條",
+  "tag.item.extshape.terracotta_vertical_quarter_pieces": "陶土縱條",
+  "tag.item.extshape.stained_terracotta_vertical_quarter_pieces": "染色陶土縱條",
+
+  "tags.block.extshape.snow": "雪"
 }
